# fantasy-football

./: .gitignore  Makefile  pyproject.toml  run_crawler.py
fantasy_football/crawler/: parse.py
fantasy_football/io/: extract_from_http.py
tests/crawler/: test_parse.py
tests/io/: test_extract_from_http.py
tests/test_io/: test_http.py
