[tool.poetry]
name = "fantasy-football"
version = "0.1.0"
description = ""
authors = ["brandon <brandon@onlinehome.de>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

